# Sigilo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPECS.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/workflows/: anonymity-check.yml  ci.yml
.streamlit/: config.toml
assets/: gerar_icone.py  gerar_logo_placeholder.py
assets/fonts/: OFL.txt
core/: config.py  logger.py  preview.py  stamper.py
scripts/: abrir_app.sh  bancada_fonte_selo.py  gerar_fixture_type0.py
tests/: test_app.py  test_config.py  test_preview.py  test_stamper.py
ui/: app.py  tema.py
